[package]
name = "auth"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# reqwest = { version = "0.10.6", features = ["json"] }
reqwest = { version = "0.10.6" }
http = "0.2.1"

[dev-dependencies]
log = "0.4"
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
