[package]
name = "diap_store"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
log = "0.4"
chrono = "0.4.11"
diaps = { path = "../diaps" }
# pretty_assertions = { version = "0.6.1", optional = true }
pretty_assertions = "0.6.1"
# from_file = "0.1.3"
# tokio = { version = "0.2", features = ["fs", "rt-threaded", "macros"] }
tokio = { version = "0.2", features = ["fs"] }

[dev-dependencies]
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
# pretty_assertions = "0.6.1"
# pretty_assertions = "0.6.1"
