[package]
name = "scanner"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"

env_logger = "0.7.1"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
chrono = "0.4.11"
ansi-escapes = "0.1"

env = { path = "../env" }
auth = { path = "../auth" }
diaps = { path = "../diaps" }
diap_store = { path = "../diap_store" }
ids = { path = "../ids" }
id_store = { path = "../id_store" }
arrange_millis = { path = "../arrange_millis" }
