[workspace]
default-members = [ "scan", "rmq" ]
members = [ 
    "term", 
    "env", 
    "json",
    "arrange_millis", 
    "auth", "diaps", 
    "diap_store", 
    "ids", 
    "id_store", 
    "cards", 
    "autocatalog",
    "scan", 
    "collect",
    "to_csv",
    "proxy_checker",
    "proxy",
    "rmq",
]
# http://rootjazz.com/proxies/proxies.txt
# [targt.x86_64-unknown-linux-musl]
# linker = "x86_64-linux-musl-gcc"

