[workspace]
default-members = [ "scan", "proxy" ]
members = [ 
    "record",
    "term", 
    "env", 
    "json",
    "arrange_millis", 
    "auth", "diaps", 
    "diap_store", 
    "ids", 
    "id_store", 
    "cards", 
    "autocatalog",
    "scan", 
    "collect",
    "to_csv",
    "proxy",
    "via_proxy",
    "rmq",
    "req",
    "res",
    "promise",
    "client",
    "test_helper",
    "settings",
    "convert",
]

