[package]
name = "collect"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"

futures = "0.3.5"

tokio = { version = "0.2", features = ["fs"] }
regex = "1.3.9"
#
# url = "2.1.1"
# reqwest = "0.10.6" 
# http = "0.2.1"
serde_json = "1.0.55"
serde = { version = "1.0", features = ["derive"] }
#
lazy_static = "1.4.0"
# regex = "1.3.9"
#
# tokio = { version = "0.2", features = ["fs"] }
#
# auth = { path = "../auth" }
arrange_millis = { path = "../arrange_millis" }
cards = { path = "../cards" }

[dev-dependencies]
# tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "fs"] }

test_helper = { path = "../test_helper" }
term = { path = "../term" }
to_csv = { path = "../to_csv" }

