[package]
name = "diaps"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"

url = "2.1.1"
http = "0.2.1"
# reqwest = { version = "0.10.6", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"

auth = { path = "../auth" }
via_proxy = { path = "../via_proxy" }
rmq = { path = "../rmq" }
client = { path = "../client" }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
test_helper = { path = "../test_helper" }

env = { path = "../env" }
term = { path = "../term" }
arrange_millis = { path = "../arrange_millis" }
