[package]
name = "env"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
test_helper = { path = "../test_helper" }
