[package]
name = "ids"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"

futures = "0.3.5"

url = "2.1.1"
serde_json = "1.0.55"

diaps = { path = "../diaps" }
auth = { path = "../auth" }
client = { path = "../client" }
http = "0.2.1"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
test_helper = { path = "../test_helper" }

crossterm = "0.17.5"

arrange_millis = { path = "../arrange_millis" }
env = { path = "../env" }
term = { path = "../term" }
rmq = { path = "../rmq" }
