[package]
name = "proxy"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0.55"
log = "0.4"
tokio = { version = "0.2", features = ["fs"] }
paste = "0.1"
reqwest = { version = "0.10.6", features = ["socks"] }
futures = "0.3.5"
json = { path = "../json" }
itertools = "0.9.0"

[dev-dependencies]
env_logger = "0.7.1"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
pretty_assertions = "0.6.1"
arrange_millis = { path = "../arrange_millis" }
term = { path = "../term" }
