[package]
name = "proxy"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
pretty_env_logger = "0.4"

# env_logger = "0.7.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
warp = "0.2"
futures = { version = "0.3", default-features = false }
tokio-amqp = "0.1.0"
lapin = "1.0.0"
# deadpool-lapin = "0.5.0"
# deadpool = "0.5.1"
deadpool-lapin = { git = "https://github.com/bikeshedder/deadpool" }
deadpool = { git = "https://github.com/bikeshedder/deadpool" }
thiserror = "1.0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
reqwest = { version = "0.10.6", features = [ "socks" ] }
http = "0.2.1"
amq-protocol-types = "6.0.0-rc9"
regex = "1.3.9"
lazy_static = "1.4.0"
arrange_millis = { path = "../arrange_millis" }

json = { path = "../json" }
rmq = { path = "../rmq" }
req = { path = "../req" }
res = { path = "../res" }

[dev-dependencies]
pretty_assertions = "0.6.1"
test_helper = { path = "../test_helper" }
