[package]
name = "res"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
# thiserror = "1.0"
# serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# chrono = "0.4.11"
# ids = { path = "../ids" }
# pretty_assertions = "0.6.1"
# tokio = { version = "0.2", features = ["fs"] }
# paste = "0.1"
reqwest = "0.10.6"
http = "0.2.1"
uuid = "0.8"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
pretty_env_logger = "0.4"
pretty_assertions = "0.6.1"


# tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
# warp = "0.2"
# futures = { version = "0.3", default-features = false }
# tokio-amqp = "0.1.0"
# lapin = "1.0.0"
# # deadpool-lapin = "0.5.0"
# # deadpool = "0.5.1"
# deadpool-lapin = { git = "https://github.com/bikeshedder/deadpool" }
# deadpool = { git = "https://github.com/bikeshedder/deadpool" }
# thiserror = "1.0.15"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0.55"
# amq-protocol-types = "6.0.0-rc9"
#
# json = { path = "../json" }
# rmq = { path = "../rmq" }
#
# [dev-dependencies]
# pretty_assertions = "0.6.1"
