[package]
name = "term"
version = "0.2.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"

crossterm = "0.17.5"

arrange_millis = { path = "../arrange_millis" }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
pretty_env_logger = "0.4"

rand = "0.7.3"

