[package]
name = "to_csv"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"

csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["fs"] }

cards = { path = "../cards" }
collect = { path = "../collect" }

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
pretty_env_logger = "0.4"

